src/App.css
* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
html {
  font-size: 20px;
  background-color: #c2b59b;
}
h1 {
  font-size: 3em;
  font-weight: 900;
}
h2 {
  font-size: 2em;
  padding-bottom: 10px;
  font-weight: 600;
}
h3 {
  font-size: 1.33em;
  font-weight: 400;
  padding-bottom: 5px;
}
h4 {
  font-size: .89em;
  font-weight: 200;
}
p {
  line-height: 1.5em;
}
footer p, header p {
  font-size: .75em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
td {
  line-height: 1.3em;
}
i {
  transition: color .2s ease-in-out;
}
i.fontawesome-contact:hover {
  color: #636363;
}
header {
  /*box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);*/
}

#instagram-window, #text-content {
  /*background: #ae9c7a;*/
  /*background: linear-gradient(#ae9c7a, #c2b59b);*/
  background: linear-gradient(#c2b59b, #ae9c7a);
  box-shadow: 0 5px 10px 0 rgba(0,0,0,0.3);
  /*border: 2px solid #ae9c7a;*/
}
#contact-expander, #overlay-button, #social {
  background: linear-gradient(#ae9c7a, #c2b59b);
  box-shadow: 0 5px 10px 0 rgba(0,0,0,0.3);
  transition: box-shadow .1s ease-in-out;
}
#contact-expander, .social-icon, .fontawesome-contact, #instagram-window {
  color: #3f3522;
}
#contact-expander:hover, #overlay-button:hover {
  /*background-color: #c2b59b;*/
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
  /*animation-name: move-text;*/
  /*animation-duration: 1s;*/
  /*animation-iteration-count: infinite;*/
}

.text-gray, #card {
  color: #3f3522;
}
.bg-light-gray {
  background-color: #c2b59b;
}
.overlay-heading, .table-label {
  color: #ae9c7a;
}
#overlay-button {
  color: #98835d;
}
.bg-gray, #card {
  background-color: #c2b59b;
}
#foot {
  background: #c2b59b;
  background: linear-gradient(#c2b59b, #ae9c7a);
  color: #444;
}
.bg-dark-gray {
  background-color: #3f3522;
}

/*@keyframes move-text {*/
  /*0% {*/
    /*background: linear-gradient(#c2b59b, #ae9c7a);*/
  /*}*/
  /*50% {*/
    /*background: linear-gradient(#ae9c7a, #c2b59b);*/
  /*}*/
  /*100% {*/
    /*background: linear-gradient(#c2b59b, #ae9c7a);*/
  /*}*/
/*}*/
#app-container {
  background-color: #fff;
}

.no-line-height {
  line-height: 0.5em;
}

.ta-center {
  text-align: center;
}

.nav-bar {
  padding: 0 20px;
}

.logo {
  animation: App-logo-spin infinite 30s linear;
  height: 60px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.flex-c {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
#contact-expander {
  width: 300px;
  text-align: center;
  padding: 10px 0;
  border-radius: 8px;
  margin: 10px 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
#overlay {
  background-color: rgba(0,0,0,0.8);
  color: #fff;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  padding: 10px;
  /*z-index: 10;*/
  /*display: none;*/
  display: flex;
  opacity: 0;
  z-index: -1;
  justify-content: center;
  align-items: center;
  transition: opacity .2s ease-in-out;
}
tr {
  line-height: 2;
}
.table-label {
  padding-right: 15px;
  padding-bottom: 15px;
  /*margin-bottom:10px;*/
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.overlay-heading {
  padding: 10px 0;
  margin-bottom: 10px;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

}
#card {
  /*background-color: #ae9c7a;*/
  padding: 0px 10px;
  border-radius: 8px;
  border: 4px solid #ae9c7a;
  transform: translateY(-10px);
  transition: transform .2s ease-in-out;
}
#overlay-button {
  /*position: absolute;*/
  /*bottom: 30px;*/
  /*left: 0;*/
  /*right: 0;*/
  border-radius: 8px;
  margin: 20px 0;
  text-align: center;
  padding: 15px 20px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.w-100 {
  width: 100%;
}
.w-50 {
  width: 50%;
}
.w-33 {
  width: 33.333333333333334%;
}

.w-main {
  width: 61.8%;
}
.w-side {
  width: 38.2%;
}
.d-inline-block {
  display: inline-block;
}
.d-block {
  display: block;
}

.sm-text {
  font-size: 1em;
}
.md-text {
  font-size: 1em;
}
.lg-text {
  font-size: 1em;
}
.vert-pad-10 {
  padding-top: 10px;
  padding-bottom: 10px;
}
.vert-pad-20 {
  padding-top: 10px;
  padding-bottom: 10px;
}
.vert-padding-30 {
  padding-top: 30px;
  padding-bottom: 30px;
}
.hor-pad-10 {
  padding-left: 10px;
  padding-right: 10px;
}
.hor-pad-20 {
  padding-left: 10px;
  padding-right: 10px;
}
.vert-margin {
  margin-top: 30px;
  margin-bottom: 30px;
}
.hor-margin-20 {
  margin-left: 20px;
  margin-right: 20px;
}
.r-margin {
  margin-right: 30px;
}
.margin-zero-auto {
  margin: 0 auto;
}
.text-white {
  color: #444;
}
.text-light-gray {
  color: #d8d8d8;
}
.text-medium-gray {
  color: #c2b59b !important;
}
.t-align-left {
  text-align: left;
}
.vert-align-top {
  vertical-align: top;
}
.vert-align-middle {
  vertical-align: middle;
}
.b-rad-8{
  border-radius: 8px;
}

#parent-content {
  padding: 30px 0;
}

#instagram-window {
  display: flex;
  justify-content: center;
  align-items: center;

  border-radius: 8px;
}

.wave {
  width: 100%;
  transform: translateY(2px);
}

/*.footer-element {*/
  /*display: inline-block;*/
  /*width: 50%;*/
  /*padding: 10px 5px;*/
  /*vertical-align: middle;*/
/*}*/


.social-icon {
  font-size: 3em !important;
}

.social-container {
  display: flex !important;
  justify-content: space-between !important;
  align-items: center !important;
  padding: 15px 0;
  margin: 0;
}
.pipe {
  color: #bcbbbb;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
/* ... */

